pin brave-core to f1ed0eeb6ff9bab63940fd23e1b86303263e8198 from PR-1419

--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "master",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
-        }
+        },
+        "commit": "f1ed0eeb6ff9bab63940fd23e1b86303263e8198"
       }
     }
   },
